Fix self-referencing issues in references & improve some styles - Prevent duplicate self-referencing joins - Ensure proper aliasing for self-referential tables - Minor style improvements for better readability

--- a/KtorAdminLibrary/src/main/resources/static/css/admin_panel_list_styles.css
+++ b/KtorAdminLibrary/src/main/resources/static/css/admin_panel_list_styles.css
@@ -187,7 +187,7 @@ h2 {
 }
 
 #filter-submit-button:hover {
-    background-color: var(--highlight-color);
+    opacity: .9;
 }
 
 .filter-field {
